fix listing dropdown and too much space profile dorpdown part2

--- a/css/custom.css
+++ b/css/custom.css
@@ -1499,7 +1499,7 @@ button:hover
     background-color: none;
  }
  
- .dropdown-menu.profile-nav-dropdown { margin:0;top: 59px;top: 5px;}
+ .dropdown-menu.profile-nav-dropdown { margin:0;top: 59px;top: auto; margin-top:5px;}
 
 
  .profile-nav-dropdown>li>a {
